deleted index.html and added changes in webserver.java for better UI